@@ -4,24 +4,31 @@
   :license {:name "Eclipse Public License"
             :url "http://www.eclipse.org/legal/epl-v10.html"}
 
-  :dependencies [[org.clojure/clojure "1.8.0"]
-                 [org.clojure/clojurescript "1.9.671" :scope "provided"]
+  :dependencies [[org.clojure/clojure "1.9.0"]
+                 [org.clojure/clojurescript "1.10.217" :scope "provided"]
                  [com.cognitect/transit-clj "0.8.300"]
-                 [ring "1.6.2"]
+                 [com.cognitect/transit-cljs "0.8.243"] ;; ??
+                 [ring "1.6.3"]
+                 [ring-transit "0.1.6"]
                  [ring/ring-defaults "0.3.1"]
-                 [bk/ring-gzip "0.2.1"]
+                 [bk/ring-gzip "0.3.0"]
                  [radicalzephyr/ring.middleware.logger "0.6.0"]
+                 ;; [bidi "2.1.3"]
                  [compojure "1.6.0"]
                  [environ "1.1.0"]
                  [com.stuartsierra/component "0.3.2"]
-                 [org.danielsz/system "0.4.0"]
+                 [org.danielsz/system "0.4.1"]
                  [org.clojure/tools.namespace "0.2.11"]
-                 [org.omcljs/om "1.0.0-alpha48"]]
+                 [org.omcljs/om "1.0.0-beta2"]
+                 [sablono "0.8.3"]
+                 [binaryage/dirac "1.2.31"]]
 
   :plugins [[lein-cljsbuild "1.1.6"]
             [lein-environ "1.1.0"]]
 
   :min-lein-version "2.6.1"
+
+  :jvm-opts ["--add-modules" "java.xml.bind"]
 
   :source-paths ["src/clj" "src/cljs" "src/cljc"]
 
@@ -97,12 +104,12 @@
   :doo {:build "test"}
 
   :profiles {:dev
-             {:dependencies [[figwheel "0.5.11"]
-                             [figwheel-sidecar "0.5.11"]
+             {:dependencies [[figwheel "0.5.15"]
+                             [figwheel-sidecar "0.5.15"]
                              [com.cemerick/piggieback "0.2.2"]
                              [org.clojure/tools.nrepl "0.2.13"]
-                             [lein-doo "0.1.7"]
-                             [reloaded.repl "0.2.3"]]
+                             [lein-doo "0.1.9"]
+                             [reloaded.repl "0.2.4"]]
 
               :plugins [[lein-figwheel "0.5.11"]
                         [lein-doo "0.1.7"]]
